--- a/온라인카지노/index.html
+++ b/온라인카지노/index.html
@@ -15,15 +15,15 @@
 		<meta property="og:site_name" content="온라인카지노 - 안전하고 신뢰할 수 있는 최고의 카지노 사이트">
 		<meta property="og:title" content="온라인카지노 - 안전하고 신뢰할 수 있는 최고의 카지노 사이트">
 		<meta property="og:description" content="[가입 code 953579] 온라인카지노에서 다양한 슬롯, 바카라, 블랙잭, 룰렛 등 최고의 카지노 게임을 경험하세요. 안전한 보안 시스템과 빠른 출금 서비스를 제공하는 신뢰할 수 있는 플랫폼입니다.">
-		<meta property="og:image" content="onlinecasino-green.vercel.app/images/01.jpg">
-		<meta property="og:url" content="onlinecasino-green.vercel.app/">
+		<meta property="og:image" content="https://onlinecasino-green.vercel.app/images/01.jpg">
+		<meta property="og:url" content="https://onlinecasino-green.vercel.app/">
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:site" content="온라인카지노 - 안전하고 신뢰할 수 있는 최고의 카지노 사이트">
 		<meta name="twitter:title" content="온라인카지노 - 안전하고 신뢰할 수 있는 최고의 카지노 사이트">
 		<meta name="twitter:description" content="[가입 code 953579] 온라인카지노에서 다양한 슬롯, 바카라, 블랙잭, 룰렛 등 최고의 카지노 게임을 경험하세요. 안전한 보안 시스템과 빠른 출금 서비스를 제공하는 신뢰할 수 있는 플랫폼입니다.">
-		<meta name="twitter:image" content="onlinecasino-green.vercel.app/images/01.jpg">
+		<meta name="twitter:image" content="https://onlinecasino-green.vercel.app/images/01.jpg">
 		<meta name="robots" content="index, follow">
-		<link rel="canonical" href="onlinecasino-green.vercel.app/">
+		<link rel="canonical" href="https://onlinecasino-green.vercel.app/">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
